@@ -1,7 +1,11 @@
 #ifndef _libdepends_node_h
 #define _libdepends_node_h
 
-typedef void (*depends_node_visitor_func)(depends_node_t *, void * data);
+#include <libcontain/list.h>
+
+#define DEPENDS_NODE_SATISFIED		0x00000001
+#define DEPENDS_NODE_FLAG_VISITED       0x00000002
+
 struct depends_node_type
 {
 	/* the key this node represents */
@@ -13,6 +17,7 @@ struct depends_node_type
 	int flags;
 };
 typedef struct depends_node_type depends_node_t;
+typedef void (*depends_node_visitor_func)(depends_node_t *, void * data);
 
 int depends_node_visit(depends_node_t * node, depends_node_visitor_func visitor, void * d);
 depends_node_t * depends_node_new(depends_t * handle, const void * key);
